--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  intl_translation: ^0.20.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -53,6 +54,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.1.11
   json_serializable: ^6.5.4
+  flutter_gen_runner: ^5.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -60,6 +62,8 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   generate: true
+  assets:
+    - lib/core/localization
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
