--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  logging: ^1.3.0
+  riverpod_annotation: ^2.6.1
 
 
 dev_dependencies:
@@ -52,9 +54,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  build_runner: ^2.1.11
+  build_runner: ^2.4.14
   json_serializable: ^6.5.4
   flutter_gen_runner: ^5.8.0
+  riverpod_generator: ^2.6.3
+  custom_lint: ^0.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
