--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   intl: any
   logging: ^1.3.0
   riverpod_annotation: ^2.6.1
+  flutter_launcher_icons: ^0.14.3
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  hooks_riverpod: ^2.6.1
+  flutter_native_splash: ^2.4.4
 
 
 dev_dependencies:
@@ -55,10 +60,11 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   build_runner: ^2.4.14
-  json_serializable: ^6.5.4
+  json_serializable: ^6.9.0
   flutter_gen_runner: ^5.8.0
   riverpod_generator: ^2.6.3
   custom_lint: ^0.7.0
+  freezed: ^2.5.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
