--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,9 +79,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/app_icons/
+    - assets/images/
+    - assets/backgrounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -120,3 +121,4 @@ flutter_native_splash:
   image: "assets/images/DashLogo.png"
   android: true
   ios: true
+  android_gravity: "center"
