--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   json_annotation: ^4.9.0
   hooks_riverpod: ^2.6.1
   flutter_native_splash: ^2.4.4
+  uuid: ^4.5.1
 
 
 dev_dependencies:
