--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_native_splash: ^2.4.4
   uuid: ^4.5.1
   flutter_svg: ^2.0.17
+  go_router: ^14.7.2
 
 
 dev_dependencies:
