--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,14 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+.VSCodeCounter/2025-02-05_17-28-54/details.md
+.VSCodeCounter/2025-02-05_17-28-54/diff-details.md
+.VSCodeCounter/2025-02-05_17-28-54/diff.csv
+.VSCodeCounter/2025-02-05_17-28-54/diff.md
+.VSCodeCounter/2025-02-05_17-28-54/diff.txt
+.VSCodeCounter/2025-02-05_17-28-54/results.csv
+.VSCodeCounter/2025-02-05_17-28-54/results.json
+.VSCodeCounter/2025-02-05_17-28-54/results.md
+.VSCodeCounter/2025-02-05_17-28-54/results.txt
+.VSCodeCounter/
