--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_svg: ^2.0.17
   go_router: ^14.8.0
   collection: ^1.19.0
+  flutter_hooks: ^0.21.2
 
 
 dev_dependencies:
