--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   go_router: ^14.8.0
   collection: ^1.19.0
   flutter_hooks: ^0.21.2
+  path_provider: ^2.1.5
 
 
 dev_dependencies:
