--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   collection: ^1.19.0
   flutter_hooks: ^0.21.2
   path_provider: ^2.1.5
+  firebase_core: ^3.12.1
 
 
 dev_dependencies:
