--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ app.*.map.json
 
 # Firebase configuration
 lib/services/firebase_options_*.dart
+android/app/google-services.json
+firebase.json
+android/app/google-services.json
+firebase.json
+ios/Runner/GoogleService-Info.plist
+macos/Runner/GoogleService-Info.plist
