--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyD46-MQcTH51U87VVi14zpzv1NcpaIFJGA</string>
+	<string>AIzaSyCf4JpoEl-0MCJYWJyKnr6g818zR3_vagI</string>
 	<key>GCM_SENDER_ID</key>
-	<string>110713674115</string>
+	<string>47140537639</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.brainBench</string>
 	<key>PROJECT_ID</key>
-	<string>brainbench-test</string>
+	<string>brainbench-prod</string>
 	<key>STORAGE_BUCKET</key>
-	<string>brainbench-test.firebasestorage.app</string>
+	<string>brainbench-prod.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:110713674115:ios:48dd2762a0153c652ffeb6</string>
+	<string>1:47140537639:ios:9d5f3efa6cbfc5e67ad502</string>
 </dict>
 </plist>
