--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_hooks: ^0.21.2
   path_provider: ^2.1.5
   firebase_core: ^3.12.1
+  firebase_auth: ^5.5.1
 
 
 dev_dependencies:
