--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   path_provider: ^2.1.5
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
+  firebase_crashlytics: ^4.3.4
+  firebase_analytics: ^11.4.4
 
 
 dev_dependencies:
