--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   firebase_analytics: ^11.4.4
   google_sign_in: ^6.3.0
   sign_in_with_apple: ^6.1.4
+  cloud_firestore: ^5.6.6
 
 
 dev_dependencies:
