--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   google_sign_in: ^6.3.0
   sign_in_with_apple: ^6.1.4
   cloud_firestore: ^5.6.6
+  rive: ^0.13.20
 
 
 dev_dependencies:
@@ -98,6 +99,7 @@ flutter:
     - assets/backgrounds/
     - assets/icons/
     - assets/social_logins/
+    - assets/rive/
     - lib/data/data_source/
 
 
