--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   sign_in_with_apple: ^6.1.4
   cloud_firestore: ^5.6.6
   rive: ^0.13.20
+  image_picker: ^1.1.2
 
 
 dev_dependencies:
