feature: add settings language switch

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -19,6 +19,8 @@ linter:
     prefer_const_literals_to_create_immutables: true
     
 analyzer:
+  errors:
+    prefer_const_constructors_in_immutables: ignore
   plugins:
     - custom_lint_rule
 
