--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,6 +21,7 @@ linter:
 analyzer:
   errors:
     prefer_const_constructors_in_immutables: ignore
+    prefer_const_constructors: ignore
   plugins:
     - custom_lint_rule
 
