--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   cloud_firestore: ^5.6.6
   rive: ^0.13.20
   image_picker: ^1.1.2
+  shared_preferences: ^2.5.3
 
 
 dev_dependencies:
