--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
     git:
       url: git@github.com:jessicaernst/gradient_design_btn.git
       ref: v1.0.0
+  mocktail: ^1.0.4
 
 
 dev_dependencies:
