--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
       url: git@github.com:jessicaernst/gradient_design_btn.git
       ref: v1.0.0
   mocktail: ^1.0.4
+  auto_hyphenating_text: ^0.3.0
 
 
 dev_dependencies:
