--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ dependencies:
   firebase_core_platform_interface: ^5.4.0
   permission_handler: ^12.0.0+1
   device_info_plus: ^11.4.0
+  fake_async: ^1.3.2
+  injectable: ^2.5.0
 
 
 dev_dependencies:
