--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,6 +113,7 @@ flutter:
     - assets/icons/
     - assets/social_logins/
     - assets/rive/
+    - assets/carousel_test/
     - lib/data/data_source/
 
 
