--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,13 +43,13 @@ dependencies:
   logging: ^1.3.0
   riverpod_annotation: ^2.6.1
   flutter_launcher_icons: ^0.14.3
-  freezed_annotation: ^2.4.4
+  freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
   hooks_riverpod: ^2.6.1
   flutter_native_splash: ^2.4.4
   uuid: ^4.5.1
   flutter_svg: ^2.0.17
-  go_router: ^14.8.0
+  go_router: ^15.1.1
   collection: ^1.19.0
   flutter_hooks: ^0.21.2
   path_provider: ^2.1.5
@@ -58,7 +58,7 @@ dependencies:
   firebase_crashlytics: ^4.3.4
   firebase_analytics: ^11.4.4
   google_sign_in: ^6.3.0
-  sign_in_with_apple: ^6.1.4
+  sign_in_with_apple: ^7.0.1
   cloud_firestore: ^5.6.6
   rive: ^0.13.20
   image_picker: ^1.1.2
@@ -73,6 +73,11 @@ dependencies:
   firebase_core_platform_interface: ^5.4.0
   permission_handler: ^12.0.0+1
   device_info_plus: ^11.4.0
+  infinite_carousel:
+    git:
+      url: git@github.com:jessicaernst/infinite_carousel.git
+      ref: v1.1.1
+
 
 
 
@@ -91,7 +96,7 @@ dev_dependencies:
   flutter_gen_runner: ^5.8.0
   riverpod_generator: ^2.6.3
   custom_lint: ^0.7.0
-  freezed: ^2.5.7
+  freezed: ^3.0.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
