--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
     git:
       url: git@github.com:jessicaernst/infinite_carousel.git
       ref: v1.1.1
+  stream_transform: ^2.1.1
 
 
 
