--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,7 @@ android/app/debug
 android/app/profile
 android/app/release
 android/app/.cxx/
+android/app/.cxx/**/
 
 # -----------------------------
 # 🔥 Firebase/Secrets/Security
