--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   cached_network_image: ^3.4.1
   firebase_storage: ^12.4.5
   flutter_image_compress: ^2.4.0
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
