--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -10,8 +10,6 @@
 	<string>Brain Bench</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -50,16 +48,18 @@
 
 	<!-- ✅ Google Sign-In Config -->
 	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>com.googleusercontent.apps.280860007604-3c8us5lra624f1pklv60hu0lt506p6hp</string>
-			</array>
-		</dict>
-	</array>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <!-- REVERSED_CLIENT_ID -->
+                <string>com.googleusercontent.apps.280860007604-3c8us5lra624f1pklv60hu0lt506p6hp</string>
+            </array>
+        </dict>
+    </array>
+
+    <key>CFBundleIdentifier</key>
+    <string>de.jessicaernst.brainBench</string>
 
 	<key>GIDClientID</key>
 	<string>280860007604-3c8us5lra624f1pklv60hu0lt506p6hp.apps.googleusercontent.com</string>
