feat(auth): sync AppUser with Firestore user data and add rxdart dependency and fixing theme and lang switch

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   firebase_storage: ^12.4.5
   flutter_image_compress: ^2.4.0
   path: ^1.9.1
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
